Bug 513766 - [1.8][inference] Compiler error when autoboxing type inferrring expression in if clause
- document javac bug

Change-Id: I9045f71946856357e10545dc20cc0d1294a8286f